# agilex-scout-odometry

./: LICENSE  README.md  tutorial.txt
examples/custom_messages/: CMakeLists.txt  package.xml
examples/custom_messages/launch/: pub_and_sub.launch  sub_test.launch
examples/custom_messages/src/: sub.cpp
examples/message_filters/: CMakeLists.txt  package.xml
examples/message_filters/src/: pub.cpp  sub.cpp  sub_pol.cpp
examples/parameter_test/: CMakeLists.txt
examples/parameter_test/cfg/: parameters.cfg
examples/parameter_test/launch/: param_set.launch
examples/parameter_test/src/: param_first.cpp  param_second.cpp
examples/pub_sub/src/: sub.cpp
examples/pub_sub_same/: CMakeLists.txt  package.xml
examples/pub_sub_same/src/: test_pub.cpp  test_sub.cpp
examples/service/: CMakeLists.txt  package.xml
examples/service/src/: add_two_int.cpp  client.cpp
examples/test_pkg/: CMakeLists.txt  package.xml
examples/tf/: CMakeLists.txt
examples/tf/launch/: turtle.launch  turtle_tf2.launch
examples/tf/src/: pub.cpp  pub_tf2.cpp
examples/timer/: CMakeLists.txt  package.xml
examples/timer/src/: pub.cpp
robotics_hw1/: CMakeLists.txt  package.xml
robotics_hw1/cfg/: parameters.cfg
robotics_hw1/launch/: lab.launch  lab_with_bag.launch
robotics_hw1/msg/: OdometryCustom.msg
robotics_hw1/src/: odometry_calculation.cpp  pose_parser.cpp
robotics_hw1/srv/: ResetOdometry.srv
